alteracao de palavras

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Meu portifólio</title>
+    <title>Aline Cruz</title>
 </head>
 
 <body>
-    <h1>Meu portifólio</h1>
-    <h2>*Aline Oliveira Cruz*</h2>
-    <img src="290637174_901960281194130_3796176878920197829_n.jpg" width=300px alt="foto aliny_trybe">
+    <h1>Aline Oliveira Cruz</h1>
+
+    <img src="/fototrybe.jpg" width=400px alt="foto aliny_trybe">
     <p> Olá! Eu me chamo <strong>Aline</strong>, nasci em São Paulo no bairro do Ipiranga e resido em São Paulo.<br>
         Sou uma pessoa muito esforçada em aprender coisas novas, dedicada e responsável.<br>
         Atualmente estudo na <strong>Trybe</strong> onde estou fazendo transição de carreira.<br>
@@ -22,8 +22,8 @@
         <li><strong>Responsável</strong></li>
     </ul>
     <br>
-    <a href="minhafoto.jpg">Quem sou eu</a><br><br>
-    <a href="https://www.linkedin.com/in/aliny-cruz-05673a141/" target="_blank">Linkedin</a>
+    <a href="/minhafoto.jpg">Quem sou eu</a><br><br>
+    <a href="https://www.linkedin.com/in/aliny-cruz-05673a141/" target="_blank">Meu Linkedin</a>
 
     <!-- Incluir Um índice com links internos para as diferentes seções do seu portfólio -->
     <!-- colocar site no ar -->
