--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Aline Oliveira Cruz</h1>
 
-    <img src="/minhafoto.jpg" width=400px alt="foto aliny">
+    <img src="./minhafoto.jpg" width=400px alt="foto aliny">
     <p> Olá! Eu me chamo <strong>Aline</strong>, nasci em São Paulo no bairro do Ipiranga e resido em São Paulo.<br>
         Sou uma pessoa muito esforçada em aprender coisas novas, dedicada e responsável.<br>
         Atualmente estudo na <strong>Trybe</strong> onde estou fazendo transição de carreira.<br>
@@ -23,11 +23,8 @@
         <li><strong>Responsável</strong></li>
     </ul>
     <br>
-    <a href="/minhafoto.jpg">Quem sou eu</a><br><br>
+    <a href="fototrybe.jpg">Quem sou eu</a><br><br>
     <a href="https://www.linkedin.com/in/aliny-cruz-05673a141/" target="_blank">Meu Linkedin</a>
-
-   
-
 
 </body>
 
