--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="lista">Responsável</li>
         <br>
 
-        <a class="lista" href="https://www.canva.com/design/DAFMP7bQH0o/kIhqt2O4P2P6bZAOekNZwA/watch?utm_content=DAFMP7bQH0o&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"> <img width="150px" src="https://3.bp.blogspot.com/-Sv6BlbpbD2o/WUwYZH_ASVI/AAAAAAAAJhU/RBDAuCFiHYcNrZLOMXoJ7xUwfPsD-o2qACEwYBhgL/s1600/QUEM-SOU-EU.png" alt="foto aline"></a><br><br>
+        <a class="lista" href="https://www.canva.com/design/DAFMP7bQH0o/M2rGCIHutmd1BNIJqVYP8g/edit?utm_content=DAFMP7bQH0o&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton> <img width="150px" src="https://3.bp.blogspot.com/-Sv6BlbpbD2o/WUwYZH_ASVI/AAAAAAAAJhU/RBDAuCFiHYcNrZLOMXoJ7xUwfPsD-o2qACEwYBhgL/s1600/QUEM-SOU-EU.png" alt="foto aline"></a><br><br>
 
             <a href="https://www.linkedin.com/in/aliny-cruz-05673a141/"
                 target="_blank"><img width="150px"
